# agentic-fraud-detection

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.py  config.yaml  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py
config/: rules.yaml
docs/: cost-sensitive-thresholding.md  real-data-evaluation.md
prompts/: injection_corpus.yaml  investigator_system.md
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: real_data_test.py  threshold_experiments.py
src/: config.py  log.py
src/agent/: guards.py  investigator.py  llm_client.py  schema.py  tools.py
src/analysis/: adversarial.py  calibration_report.py  data_quality.py  disparity.py  drift.py  evaluation.py
src/api/: app.py  deps.py
src/api/routers/: audit.py  cases.py  entities.py  metrics.py
src/audit/: log.py  query.py
src/dashboard/: api_client.py  app.py  theme.py
src/dashboard/pages/: audit.py  evaluation.py  monitoring.py  (+3 more)
src/data/: archetypes.py  schema.py  seeds.py  simulator.py  store.py
src/graph/: builder.py  features.py  rings.py
src/models/: account_risk.py  base.py  calibration.py  features.py  pipeline.py  registry.py  txn_risk.py
src/orchestrator/: decision.py  queue.py
src/rules/: engine.py  loader.py
tests/: conftest.py  test_agent_boundedness.py  test_amount_aware.py  test_archetypes_labels.py  test_audit_completeness.py  test_evaluation_metrics.py  test_graph_rings.py  test_models_calibration.py  test_monitoring_drift.py  test_orchestrator_queue.py  test_prompt_injection.py  test_rules_engine.py  test_simulator_determinism.py
