[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudguard"
version = "0.1.0"
description = "Agentic Fraud & Abuse Detection System — fraud ML, graph analysis, bounded LLM investigator, evaluation, monitoring, and an audited human-in-the-loop review queue."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "dash>=2.14.0",
    "dash-mantine-components>=0.14.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "networkx>=3.2",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
